Reduce village frequency; disable most of enviromine

--- a/config/enviromine/Global_Settings.cfg
+++ b/config/enviromine/Global_Settings.cfg
@@ -71,9 +71,9 @@ Physics {
 
 Potions {
     I:Dehydration=37
-    B:"Enable Frostbite"=true
-    B:"Enable Heat Stroke"=true
-    B:"Enable Hypothermia"=true
+    B:"Enable Frostbite"=false
+    B:"Enable Heat Stroke"=false
+    B:"Enable Hypothermia"=false
     I:Frostbite=34
     I:"Heat Stroke"=33
     I:Hypothermia=32
@@ -83,7 +83,7 @@ Potions {
 
 "World Generation" {
     # Generates massive abandoned mineshafts (size doesn't cause lag) (This Overrides all Dimensions. Check Custom Dimension properties if you want to set it only for certain Dimensions.)
-    B:"Enable New Abandoned Mineshafts"=true
+    B:"Enable New Abandoned Mineshafts"=false
 
     # Generates mineshafts in villages
     B:"Enable Village MineShafts"=true
