--- a/config/enviromine/profiles/default/default_Settings.cfg
+++ b/config/enviromine/profiles/default/default_Settings.cfg
@@ -13,11 +13,11 @@ Config {
 
 
 Earthquakes {
-    B:"Enable Earthquakes"=true
+    B:"Enable Earthquakes"=false
     I:Rarity=100
 
     # Can cause major lag at times (Requires main physics to be enabled)
-    B:"Triggers Physics"=true
+    B:"Triggers Physics"=false
 }
 
 
@@ -29,7 +29,7 @@ Earthquakes {
 
 Physics {
     S:"Default Stability Type (BlockIDs > 175)"=loose
-    B:"Stone Cracks Before Falling"=true
+    B:"Stone Cracks Before Falling"=false
 }
 
 
@@ -43,17 +43,17 @@ Physics {
 
 general {
     # True/False to turn Enviromine Trackers for Sanity, Air Quality, Hydration, and Body Temperature.
-    B:"Allow Air Quality"=true
-    B:"Allow Body Temperature"=true
-    B:"Allow Hydration"=true
-    B:"Allow Sanity"=true
+    B:"Allow Air Quality"=false
+    B:"Allow Body Temperature"=false
+    B:"Allow Hydration"=false
+    B:"Allow Sanity"=false
     I:"Default spoil time (days)"=7
 
     # Turn physics On/Off
-    B:"Enable Physics"=true
-    B:"Enable Physics Landslide"=true
+    B:"Enable Physics"=false
+    B:"Enable Physics Landslide"=false
     B:"Enable food spoiling"=true
-    B:"Enable villager assistance"=true
+    B:"Enable villager assistance"=false
     B:"Torches burn"=true
     B:"Torches go out"=true
 
