--- a/config/LaunchGui.cfg
+++ b/config/LaunchGui.cfg
@@ -14,7 +14,7 @@ global {
     S:modpackName=Revolution
 
     # The current version of your modpack [default: 1.7.10-2.0-18]
-    S:modpackVersion=1.4.0.0
+    S:modpackVersion=2.0.0.0
 }
 
 
@@ -71,7 +71,7 @@ notice {
 
     information {
         # Title to display at the top [default: Important Notice]
-        S:infoTitle=Revolution v2.0.0.0 Breaking News
+        S:infoTitle=Revolution %version% Breaking News
 
         # URL to pull information from.
         # Use "\n" to define a new line. If the line is still too long, it will split for you.
