--- a/config/LaunchGui.cfg
+++ b/config/LaunchGui.cfg
@@ -71,7 +71,7 @@ notice {
 
     information {
         # Title to display at the top [default: Important Notice]
-        S:infoTitle=Revolution %version% Breaking News
+        S:infoTitle=Revolution Breaking News
 
         # URL to pull information from.
         # Use "\n" to define a new line. If the line is still too long, it will split for you.
