Finalizing custom main menu

--- a/config/HarderWildlife.cfg
+++ b/config/HarderWildlife.cfg
@@ -20,7 +20,11 @@ animals {
     S:AcceleratedAging <
         Chicken
      >
+
+    # Enables/disables goats [default: true]
     B:AddGoats=true
+
+    # Enables/disables lizards [default: true]
     B:AddLizards=true
 
     # Lower's Chicken maximum age by this factor (maxAge = defaultMaxAge / ageFactor).
@@ -53,6 +57,9 @@ animals {
     # Note: Animals may have an accelerated aging rate, this value is the general-case value.
     #  [range: 5000 ~ 2000000, default: 24000]
     I:animalMaxAge=24000
+
+    # Raw leather (rawhide) requires curing on a tanning rack before it can be used.
+    #  [default: true]
     B:doRawLeather=true
 }
 
@@ -91,6 +98,9 @@ plants {
     # Kind of buggy and imperfect, feel free to disable as its largely a 'nice touch' feature.
     #  [default: true]
     B:autoPlantSaplings=true
+
+    # Instantly kill any tree that is growing on non-standard materials.
+    #  [default: false]
     B:secialTreeKill=false
 
     # Enables/disables tree tracking, which is required for automated tree death.
@@ -116,14 +126,25 @@ seasons {
 
     # Allows snow to pile up when it snows and melt away again. [default: true]
     B:EnableSnowAccumulation=true
+
+    # Toggle for whether or not seasonal variation in weather should occur. [default: true]
     B:doSeasons=true
+
+    # Set to true to use ᴼC and cm.  Temperatures are only approximately equivalent to the real world
+    # at 10ᴼF = 0.1ᴼMC [default: false]
     B:metricUnits=false
 
     # How many Minecraft-Days it takes the moon to change phase ("1 week").
     # 1 is vanilla, 1 or 2 is good for SSP, 8+ is good for SMP.  Effects year length.
     #  [range: 1 ~ 32, default: 2]
     I:moonPhaseTime=2
+
+    # Takes the place of the season modifier when seasons are off.
+    #  [range: -2.0 ~ 2.0, default: 0.54641014]
     S:staticRainModifier=0.54641014
+
+    # Takes the place of the season modifier when seasons are off.
+    #  [range: -2.0 ~ 2.0, default: 0.0]
     S:staticTempModifier=0.0
 
     # If enabled, the week and year lengths are 1/10th of normal.
