Removed natura crop stuff; hunger overhaul crop growth disabled; enabled harder wildlife crops; can no longer use clams as fertilizer

--- a/config/DCsAppleMilk.cfg
+++ b/config/DCsAppleMilk.cfg
@@ -148,7 +148,7 @@ potionid {
 
 setting {
     # Allow to use the clam and the clam container as fertilizer.
-    B:"Allow Clam Fertilizer"=true
+    B:"Allow Clam Fertilizer"=false
 
     # Allow the WipeBox generate a paper infinitely.
     B:"Allow Infinity Wipes"=false
