--- a/config/HarderWildlife.cfg
+++ b/config/HarderWildlife.cfg
@@ -70,7 +70,7 @@ crops {
     # Note: please disable Gany's Surface's snow accumulation, if it is
     # installed (mine results in a smoother variation between blocks).
     #  [default: true]
-    B:EnableCropSlowing=false
+    B:EnableCropSlowing=true
 
     # Enables or disables the crop growth based on biome information (which is effected by seasons,
     # if enabled and ignored if slow crops is disabled). Most (vanilla) biomes have some semblance of a
@@ -79,7 +79,7 @@ crops {
     # this might be required!
     # If disabled, base slowdown probability is used instead.
     #  [default: true]
-    B:EnableCropSlowingByBiome=false
+    B:EnableCropSlowingByBiome=true
 
     # Configures the worst possible growth rate for biome based crop growth.
     # In the worst possible conditions, the chance that crops will grow will not drop
