--- a/config/Natura.cfg
+++ b/config/Natura.cfg
@@ -1,35 +1,35 @@
 # Configuration file
 
 disabler {
-    B:"Drop barley seeds from grass"=true
-    B:"Drop cotton seeds from grass"=true
-    B:"Enable wheat to flour recipe"=true
+    B:"Drop barley seeds from grass"=false
+    B:"Drop cotton seeds from grass"=false
+    B:"Enable wheat to flour recipe"=false
     B:"Generate Amaranth Trees"=true
     B:"Generate Ash Clouds"=true
-    B:"Generate Barley Crops"=true
-    B:"Generate Blackberry Bushes"=true
-    B:"Generate Blightberry Bushes"=true
+    B:"Generate Barley Crops"=false
+    B:"Generate Blackberry Bushes"=false
+    B:"Generate Blightberry Bushes"=false
     B:"Generate Bloodwood Trees"=true
     B:"Generate Bluebell Flowers"=true
-    B:"Generate Blueberry Bushes"=true
-    B:"Generate Cotton Crops"=true
+    B:"Generate Blueberry Bushes"=false
+    B:"Generate Cotton Crops"=false
     B:"Generate Dark Clouds"=true
     B:"Generate Darkwood Trees"=true
-    B:"Generate Duskberry Bushes"=true
+    B:"Generate Duskberry Bushes"=false
     B:"Generate Fusewood Trees"=true
     B:"Generate Ghost Trees"=true
     B:"Generate Hopseed Trees"=true
-    B:"Generate Maloberry Bushes"=true
+    B:"Generate Maloberry Bushes"=false
     B:"Generate Maple Trees"=true
     B:"Generate Overworld Clouds"=true
-    B:"Generate Raspberry Bushes"=true
+    B:"Generate Raspberry Bushes"=false
     B:"Generate Redwood Trees"=true
     B:"Generate Saguaro Cactus"=true
     B:"Generate Sakura Trees"=true
     B:"Generate Silverbell Trees"=true
-    B:"Generate Skyberry Bushes"=true
+    B:"Generate Skyberry Bushes"=false
     B:"Generate Small Eucalyptus Trees"=true
-    B:"Generate Stingberry Bushes"=true
+    B:"Generate Stingberry Bushes"=false
     B:"Generate Sulfur Clouds"=true
     B:"Generate Thornvines"=true
     B:"Generate Tigerwood Trees"=true
