RFTools and various massive power increases

--- a/config/DCsAppleMilk.cfg
+++ b/config/DCsAppleMilk.cfg
@@ -20,7 +20,7 @@
 
 "difficulty setting" {
     # Enable Recipes added the another mod machines.
-    B:"Another Mod Recipe"=true
+    B:"Another Mod Recipe"=false
 
     # Change difficulty of the battery charge amount.
     # 0:sweet 1:normal 2:bitter 3:hard
@@ -33,7 +33,7 @@
 
     # Change difficulty of the JawCrusher recipe.
     # 0:sweet 1:normal 2:bitter 3:hard
-    I:"JawCrusher Dust Gen"=1
+    I:"JawCrusher Dust Gen"=3
 }
 
 
