--- a/config/remainInMotion.cfg
+++ b/config/remainInMotion.cfg
@@ -110,13 +110,13 @@ Debugging {
 
 Hardmode {
     # Use RF to power carriages in addition to redstone
-    B:EnableHardmode=false
+    B:EnableHardmode=true
 
     # Power consumption factor
-    D:EnergyUseScalar=10.0
+    D:EnergyUseScalar=40.0
 
     # Power capacity of carriages
-    I:MaxEnergyStored=10000
+    I:MaxEnergyStored=40000
 
     # The distance a translocator moves affects the amount of energy required (very expensive)
     B:distanceAffectsEnergy=true
