Retrying with HarderUnderground disabled

--- a/config/HarderUnderground.cfg
+++ b/config/HarderUnderground.cfg
@@ -27,7 +27,7 @@ general {
 
 hazards {
     # If enabled, collapsing stone will spawn a cloud of choking dust. [default: true]
-    B:enableRockDust=true
+    B:enableRockDust=false
 
     # If enabled, falling block type blocks will attempt to move
     # sideways one block if there is open space there, forming pyramids.
@@ -40,7 +40,7 @@ hazards {
     # If you are seeing root.tick.gameMode.checkLight (shift-F3) taking most of the
     # frame time (>10% of total), lower this value.
     #  [range: -1 ~ 512, default: 96]
-    I:gasCatchFireRange=96
+    I:gasCatchFireRange=-1
 
     # If true, thin volatile gas will try to move past standard "water tight" blocks
     # like doors and signs.
@@ -51,15 +51,15 @@ hazards {
     # Drops unstable cobble which smelts into unstable stone.
     # There is a crafting recipe to convert to vanilla.
     #  [default: true]
-    B:replaceStone=true
+    B:replaceStone=false
 
     # This spawns smoke above fires when the player is nearby and dissipates quickly.
     #  [default: true]
-    B:spawnSmoke=true
+    B:spawnSmoke=false
 
     # This spawns smoke above lava when the player is nearby and dissipates quickly.
     #  [default: true]
-    B:spawnVolcanicGas=true
+    B:spawnVolcanicGas=false
 }
 
 
