--- a/config/enviromine/Global_Settings.cfg
+++ b/config/enviromine/Global_Settings.cfg
@@ -17,7 +17,7 @@ Config {
 
 Gases {
     # Disables all gases and slowly deletes existing pockets
-    B:"Disable Gases"=true
+    B:"Disable Gases"=false
 
     # How many gases can be processed in a single pass per chunk (-1 = infinite)
     I:"Gas Pass Limit"=-1
@@ -38,7 +38,7 @@ Gases {
      >
 
     # Whether to render gases not normally visible
-    B:"Render normal gas"=false
+    B:"Render normal gas"=true
 
     # Normal gases will move extremely slowly and reduce TPS lag
     B:"Slow Gases"=true
@@ -87,7 +87,7 @@ Potions {
 
     # Generates mineshafts in villages
     B:"Enable Village MineShafts"=true
-    B:"Generate Gases"=false
+    B:"Generate Gases"=true
 }
 
 
