--- a/config/enviromine/profiles/default/default_Settings.cfg
+++ b/config/enviromine/profiles/default/default_Settings.cfg
@@ -29,7 +29,7 @@ Earthquakes {
 
 Physics {
     S:"Default Stability Type (BlockIDs > 175)"=loose
-    B:"Stone Cracks Before Falling"=false
+    B:"Stone Cracks Before Falling"=true
 }
 
 
@@ -43,14 +43,14 @@ Physics {
 
 general {
     # True/False to turn Enviromine Trackers for Sanity, Air Quality, Hydration, and Body Temperature.
-    B:"Allow Air Quality"=false
+    B:"Allow Air Quality"=true
     B:"Allow Body Temperature"=false
     B:"Allow Hydration"=false
     B:"Allow Sanity"=false
     I:"Default spoil time (days)"=7
 
     # Turn physics On/Off
-    B:"Enable Physics"=false
+    B:"Enable Physics"=true
     B:"Enable Physics Landslide"=false
     B:"Enable food spoiling"=true
     B:"Enable villager assistance"=false
