--- a/config/rftools/dimlets.cfg
+++ b/config/rftools/dimlets.cfg
@@ -182,6 +182,7 @@ dimletsettings {
     I:rarity.Patreon.Rouven=3
     I:"rarity.Special.Mediocre Efficiency"=4
     I:"rarity.Special.No Animals"=2
+    I:rarity.Special.Owner=0
     I:rarity.Special.Seed=2
     I:rarity.Special.Shelter=3
     I:rarity.Special.Spawn=2
@@ -247,6 +248,9 @@ dimletsettings {
     I:"rfcreate.Effect.Wither II"=1000
     I:"rfcreate.Effect.Wither III"=1000
     I:rfcreate.Feature.Clean=10
+    I:rfcreate.Feature.Maze=100
+    I:"rfcreate.Feature.No Dimlet Buildings"=100
+    I:rfcreate.Feature.Volcanoes=100
     I:rfcreate.Liquid.None=300
     I:rfcreate.Liquid.aluminum.molten=8500
     I:rfcreate.Liquid.ardite.molten=400000
@@ -357,6 +361,7 @@ dimletsettings {
     I:rfcreate.Material.tile.thermalfoundation.ore5=16000
     I:rfcreate.Mob.Blaze=6000
     I:rfcreate.Mob.Blizz=6000
+    I:rfcreate.Mob.Default=300
     I:rfcreate.Mob.Dragon=10000
     I:rfcreate.Mob.Enderman=10000
     I:rfcreate.Mob.Ghast=4000
@@ -364,11 +369,20 @@ dimletsettings {
     I:rfcreate.Mob.Villager=10000
     I:rfcreate.Mob.Wisp=6000
     I:rfcreate.Mob.Wither=10000
+    I:rfcreate.Patreon.FireBall=10
+    I:rfcreate.Patreon.Lockesly=10
+    I:rfcreate.Patreon.McJty=10
+    I:rfcreate.Patreon.Nissenfeld=10
+    I:rfcreate.Patreon.Puppeteer=10
     I:rfcreate.Patreon.Rouven=100
+    I:rfcreate.Patreon.SickHippie=10
+    I:rfcreate.Patreon.TomWolf=10
     I:rfcreate.Special.Efficiency=100000
     I:"rfcreate.Special.Mediocre Efficiency"=40000
     I:"rfcreate.Special.No Animals"=5000
+    I:rfcreate.Special.Owner=0
     I:rfcreate.Special.Peaceful=70000
+    I:rfcreate.Special.Seed=1000
     I:rfcreate.Special.Shelter=15000
     I:rfcreate.Special.Spawn=10000
     I:"rfcreate.Weather.No Rain"=300
@@ -543,6 +557,7 @@ dimletsettings {
     I:rfmaintain.Material.tile.thermalfoundation.ore5=4000
     I:rfmaintain.Mob.Blaze=3000
     I:rfmaintain.Mob.Blizz=3000
+    I:rfmaintain.Mob.Default=100
     I:rfmaintain.Mob.Dragon=10000
     I:rfmaintain.Mob.Enderman=5000
     I:rfmaintain.Mob.Ghast=2000
@@ -550,10 +565,18 @@ dimletsettings {
     I:rfmaintain.Mob.Villager=7000
     I:rfmaintain.Mob.Wisp=3000
     I:rfmaintain.Mob.Wither=10000
+    I:rfmaintain.Patreon.FireBall=0
+    I:rfmaintain.Patreon.Lockesly=0
+    I:rfmaintain.Patreon.McJty=0
+    I:rfmaintain.Patreon.Nissenfeld=0
+    I:rfmaintain.Patreon.Puppeteer=0
     I:rfmaintain.Patreon.Rouven=100
+    I:rfmaintain.Patreon.SickHippie=0
+    I:rfmaintain.Patreon.TomWolf=0
     I:rfmaintain.Special.Efficiency=-20
     I:"rfmaintain.Special.Mediocre Efficiency"=-5
     I:"rfmaintain.Special.No Animals"=40
+    I:rfmaintain.Special.Owner=0
     I:rfmaintain.Special.Peaceful=40000
     I:rfmaintain.Special.Seed=0
     I:rfmaintain.Special.Shelter=0
@@ -739,6 +762,7 @@ dimletsettings {
     I:ticks.Special.Efficiency=900
     I:"ticks.Special.Mediocre Efficiency"=400
     I:"ticks.Special.No Animals"=10
+    I:ticks.Special.Owner=0
     I:ticks.Special.Peaceful=900
     I:ticks.Special.Seed=100
     I:ticks.Special.Shelter=400
