--- a/config/enviromine/CaveDimension.cfg
+++ b/config/enviromine/CaveDimension.cfg
@@ -4,7 +4,7 @@ Main {
     B:"Can Respawn in Caves"=false
     I:"Cave Biome ID"=23
     I:"Dimension ID"=-2
-    B:"Disable Elevator Access"=true
+    B:"Disable Elevator Access"=false
     I:Dungeons=8
     I:"Elevator Height Limit"=10
     B:"Enforce Spawn Weights"=false
