Reapplying village distance change. At 32, they are too rare.

--- a/config/enviromine/profiles/default/default_Settings.cfg
+++ b/config/enviromine/profiles/default/default_Settings.cfg
@@ -43,7 +43,7 @@ Physics {
 
 general {
     # True/False to turn Enviromine Trackers for Sanity, Air Quality, Hydration, and Body Temperature.
-    B:"Allow Air Quality"=true
+    B:"Allow Air Quality"=false
     B:"Allow Body Temperature"=false
     B:"Allow Hydration"=false
     B:"Allow Sanity"=false
