Remove pmp from SpecialAI; update NOTES

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -7948,6 +7948,7 @@ malisisdoors {
     B:jaildoor=false
     B:jungleFenceGate=false
     B:laboratorydoor=false
+    B:medievaldoor=false
     B:mixedblock=false
     B:null=false
     B:playersensor=false
