--- a/config/SpecialAI.cfg
+++ b/config/SpecialAI.cfg
@@ -109,7 +109,7 @@ passive_griefing {
 
     # (Block list) Specific blocks that will be targeted by mobs. Defaults to farmland, beds, crafting tables, wooden doors, wooden trapdoors, fence gates, ladders, and cakes.
     # This is a comma-separated list. You may specify metadata (0-15) with a space after the id, followed by the metadata. For example, "cake" will cause mobs to target all cakes, while "cake 0" will cause mobs to only target cakes that have not been partially eaten.
-    S:target_blocks=crafting_table,wooden_door,trapdoor,fence_gate,ladder,cake,cobblestone,plantmegapack:bambooWetForest,plantmegapack:bambooTropicalBlue,plantmegapack:bambooTimorBlack,plantmegapack:bambooShortTassled,plantmegapack:bambooMoso,plantmegapack:bambooGolden,plantmegapack:bambooGiantTimber,plantmegapack:bambooFargesiaRobusta,plantmegapack:bambooAsper,planks
+    S:target_blocks=crafting_table,wooden_door,trapdoor,fence_gate,ladder,cake,cobblestone,planks
 }
 
 
@@ -144,7 +144,7 @@ special_ai {
     I:ai_shaman=1
     I:ai_spawner=1
     I:ai_sprint=1
-    I:ai_thief=1
+    I:ai_thief=0
     I:ai_throw=1
     I:ai_throw_player=1
 }
