Reduce rainbow forest frequency.

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -5977,6 +5977,10 @@ gardentrees {
     B:thinlog.1128=false
     B:thinlog.1133=false
     B:thinlog.1135=false
+    B:thinlog.1150=false
+    B:thinlog.1151=false
+    B:thinlog.1152=false
+    B:thinlog.1153=false
     B:thinlog.1155=false
     B:thinlog.1156=false
     B:thinlog.1157=false
@@ -6095,6 +6099,10 @@ gardentrees {
     B:thinlog.13416=false
     B:thinlog.13421=false
     B:thinlog.13423=false
+    B:thinlog.13438=false
+    B:thinlog.13439=false
+    B:thinlog.13440=false
+    B:thinlog.13441=false
     B:thinlog.13443=false
     B:thinlog.13444=false
     B:thinlog.13445=false
@@ -6272,6 +6280,10 @@ gardentrees {
     B:thinlog.5224=false
     B:thinlog.5229=false
     B:thinlog.5231=false
+    B:thinlog.5246=false
+    B:thinlog.5247=false
+    B:thinlog.5248=false
+    B:thinlog.5249=false
     B:thinlog.5251=false
     B:thinlog.5252=false
     B:thinlog.5253=false
@@ -6446,6 +6458,10 @@ gardentrees {
     B:thinlog.9320=false
     B:thinlog.9325=false
     B:thinlog.9327=false
+    B:thinlog.9342=false
+    B:thinlog.9343=false
+    B:thinlog.9344=false
+    B:thinlog.9345=false
     B:thinlog.9347=false
     B:thinlog.9348=false
     B:thinlog.9349=false
@@ -6534,6 +6550,10 @@ gardentrees {
     B:thinlogfence.1128=false
     B:thinlogfence.1133=false
     B:thinlogfence.1135=false
+    B:thinlogfence.1150=false
+    B:thinlogfence.1151=false
+    B:thinlogfence.1152=false
+    B:thinlogfence.1153=false
     B:thinlogfence.1155=false
     B:thinlogfence.1156=false
     B:thinlogfence.1157=false
@@ -6652,6 +6672,10 @@ gardentrees {
     B:thinlogfence.13416=false
     B:thinlogfence.13421=false
     B:thinlogfence.13423=false
+    B:thinlogfence.13438=false
+    B:thinlogfence.13439=false
+    B:thinlogfence.13440=false
+    B:thinlogfence.13441=false
     B:thinlogfence.13443=false
     B:thinlogfence.13444=false
     B:thinlogfence.13445=false
@@ -6829,6 +6853,10 @@ gardentrees {
     B:thinlogfence.5224=false
     B:thinlogfence.5229=false
     B:thinlogfence.5231=false
+    B:thinlogfence.5246=false
+    B:thinlogfence.5247=false
+    B:thinlogfence.5248=false
+    B:thinlogfence.5249=false
     B:thinlogfence.5251=false
     B:thinlogfence.5252=false
     B:thinlogfence.5253=false
@@ -7003,6 +7031,10 @@ gardentrees {
     B:thinlogfence.9320=false
     B:thinlogfence.9325=false
     B:thinlogfence.9327=false
+    B:thinlogfence.9342=false
+    B:thinlogfence.9343=false
+    B:thinlogfence.9344=false
+    B:thinlogfence.9345=false
     B:thinlogfence.9347=false
     B:thinlogfence.9348=false
     B:thinlogfence.9349=false
@@ -12013,6 +12045,241 @@ storagedrawersforestry {
     B:trimB.7=true
     B:trimB.8=true
     B:trimB.9=true
+}
+
+
+storagedrawersmisc {
+    B:fullDrawers10=false
+    B:fullDrawers10.1=false
+    B:fullDrawers10.2=false
+    B:fullDrawers10.3=false
+    B:fullDrawers10.4=false
+    B:fullDrawers10.5=false
+    B:fullDrawers10.6=false
+    B:fullDrawers10.7=false
+    B:fullDrawers10.8=false
+    B:fullDrawers11=false
+    B:fullDrawers11.1=false
+    B:fullDrawers11.10=false
+    B:fullDrawers11.11=false
+    B:fullDrawers11.2=false
+    B:fullDrawers11.3=false
+    B:fullDrawers11.4=false
+    B:fullDrawers11.5=false
+    B:fullDrawers11.6=false
+    B:fullDrawers11.7=false
+    B:fullDrawers11.8=false
+    B:fullDrawers11.9=false
+    B:fullDrawers20=false
+    B:fullDrawers20.1=false
+    B:fullDrawers20.2=false
+    B:fullDrawers20.3=false
+    B:fullDrawers20.4=false
+    B:fullDrawers20.5=false
+    B:fullDrawers20.6=false
+    B:fullDrawers20.7=false
+    B:fullDrawers20.8=false
+    B:fullDrawers21=false
+    B:fullDrawers21.1=false
+    B:fullDrawers21.10=false
+    B:fullDrawers21.11=false
+    B:fullDrawers21.2=false
+    B:fullDrawers21.3=false
+    B:fullDrawers21.4=false
+    B:fullDrawers21.5=false
+    B:fullDrawers21.6=false
+    B:fullDrawers21.7=false
+    B:fullDrawers21.8=false
+    B:fullDrawers21.9=false
+    B:fullDrawers40=false
+    B:fullDrawers40.1=false
+    B:fullDrawers40.2=false
+    B:fullDrawers40.3=false
+    B:fullDrawers40.4=false
+    B:fullDrawers40.5=false
+    B:fullDrawers40.6=false
+    B:fullDrawers40.7=false
+    B:fullDrawers40.8=false
+    B:fullDrawers41=false
+    B:fullDrawers41.1=false
+    B:fullDrawers41.10=false
+    B:fullDrawers41.11=false
+    B:fullDrawers41.2=false
+    B:fullDrawers41.3=false
+    B:fullDrawers41.4=false
+    B:fullDrawers41.5=false
+    B:fullDrawers41.6=false
+    B:fullDrawers41.7=false
+    B:fullDrawers41.8=false
+    B:fullDrawers41.9=false
+    B:fullDrawersSort10=false
+    B:fullDrawersSort10.1=false
+    B:fullDrawersSort10.2=false
+    B:fullDrawersSort10.3=false
+    B:fullDrawersSort10.4=false
+    B:fullDrawersSort10.5=false
+    B:fullDrawersSort10.6=false
+    B:fullDrawersSort10.7=false
+    B:fullDrawersSort10.8=false
+    B:fullDrawersSort11=false
+    B:fullDrawersSort11.1=false
+    B:fullDrawersSort11.10=false
+    B:fullDrawersSort11.11=false
+    B:fullDrawersSort11.2=false
+    B:fullDrawersSort11.3=false
+    B:fullDrawersSort11.4=false
+    B:fullDrawersSort11.5=false
+    B:fullDrawersSort11.6=false
+    B:fullDrawersSort11.7=false
+    B:fullDrawersSort11.8=false
+    B:fullDrawersSort11.9=false
+    B:fullDrawersSort20=false
+    B:fullDrawersSort20.1=false
+    B:fullDrawersSort20.2=false
+    B:fullDrawersSort20.3=false
+    B:fullDrawersSort20.4=false
+    B:fullDrawersSort20.5=false
+    B:fullDrawersSort20.6=false
+    B:fullDrawersSort20.7=false
+    B:fullDrawersSort20.8=false
+    B:fullDrawersSort21=false
+    B:fullDrawersSort21.1=false
+    B:fullDrawersSort21.10=false
+    B:fullDrawersSort21.11=false
+    B:fullDrawersSort21.2=false
+    B:fullDrawersSort21.3=false
+    B:fullDrawersSort21.4=false
+    B:fullDrawersSort21.5=false
+    B:fullDrawersSort21.6=false
+    B:fullDrawersSort21.7=false
+    B:fullDrawersSort21.8=false
+    B:fullDrawersSort21.9=false
+    B:fullDrawersSort40=false
+    B:fullDrawersSort40.1=false
+    B:fullDrawersSort40.2=false
+    B:fullDrawersSort40.3=false
+    B:fullDrawersSort40.4=false
+    B:fullDrawersSort40.5=false
+    B:fullDrawersSort40.6=false
+    B:fullDrawersSort40.7=false
+    B:fullDrawersSort40.8=false
+    B:fullDrawersSort41=false
+    B:fullDrawersSort41.1=false
+    B:fullDrawersSort41.10=false
+    B:fullDrawersSort41.11=false
+    B:fullDrawersSort41.2=false
+    B:fullDrawersSort41.3=false
+    B:fullDrawersSort41.4=false
+    B:fullDrawersSort41.5=false
+    B:fullDrawersSort41.6=false
+    B:fullDrawersSort41.7=false
+    B:fullDrawersSort41.8=false
+    B:fullDrawersSort41.9=false
+    B:halfDrawers20=false
+    B:halfDrawers20.1=false
+    B:halfDrawers20.2=false
+    B:halfDrawers20.3=false
+    B:halfDrawers20.4=false
+    B:halfDrawers20.5=false
+    B:halfDrawers20.6=false
+    B:halfDrawers20.7=false
+    B:halfDrawers20.8=false
+    B:halfDrawers21=false
+    B:halfDrawers21.1=false
+    B:halfDrawers21.10=false
+    B:halfDrawers21.11=false
+    B:halfDrawers21.2=false
+    B:halfDrawers21.3=false
+    B:halfDrawers21.4=false
+    B:halfDrawers21.5=false
+    B:halfDrawers21.6=false
+    B:halfDrawers21.7=false
+    B:halfDrawers21.8=false
+    B:halfDrawers21.9=false
+    B:halfDrawers40=false
+    B:halfDrawers40.1=false
+    B:halfDrawers40.2=false
+    B:halfDrawers40.3=false
+    B:halfDrawers40.4=false
+    B:halfDrawers40.5=false
+    B:halfDrawers40.6=false
+    B:halfDrawers40.7=false
+    B:halfDrawers40.8=false
+    B:halfDrawers41=false
+    B:halfDrawers41.1=false
+    B:halfDrawers41.10=false
+    B:halfDrawers41.11=false
+    B:halfDrawers41.2=false
+    B:halfDrawers41.3=false
+    B:halfDrawers41.4=false
+    B:halfDrawers41.5=false
+    B:halfDrawers41.6=false
+    B:halfDrawers41.7=false
+    B:halfDrawers41.8=false
+    B:halfDrawers41.9=false
+    B:halfDrawersSort20=false
+    B:halfDrawersSort20.1=false
+    B:halfDrawersSort20.2=false
+    B:halfDrawersSort20.3=false
+    B:halfDrawersSort20.4=false
+    B:halfDrawersSort20.5=false
+    B:halfDrawersSort20.6=false
+    B:halfDrawersSort20.7=false
+    B:halfDrawersSort20.8=false
+    B:halfDrawersSort21=false
+    B:halfDrawersSort21.1=false
+    B:halfDrawersSort21.10=false
+    B:halfDrawersSort21.11=false
+    B:halfDrawersSort21.2=false
+    B:halfDrawersSort21.3=false
+    B:halfDrawersSort21.4=false
+    B:halfDrawersSort21.5=false
+    B:halfDrawersSort21.6=false
+    B:halfDrawersSort21.7=false
+    B:halfDrawersSort21.8=false
+    B:halfDrawersSort21.9=false
+    B:halfDrawersSort40=false
+    B:halfDrawersSort40.1=false
+    B:halfDrawersSort40.2=false
+    B:halfDrawersSort40.3=false
+    B:halfDrawersSort40.4=false
+    B:halfDrawersSort40.5=false
+    B:halfDrawersSort40.6=false
+    B:halfDrawersSort40.7=false
+    B:halfDrawersSort40.8=false
+    B:halfDrawersSort41=false
+    B:halfDrawersSort41.1=false
+    B:halfDrawersSort41.10=false
+    B:halfDrawersSort41.11=false
+    B:halfDrawersSort41.2=false
+    B:halfDrawersSort41.3=false
+    B:halfDrawersSort41.4=false
+    B:halfDrawersSort41.5=false
+    B:halfDrawersSort41.6=false
+    B:halfDrawersSort41.7=false
+    B:halfDrawersSort41.8=false
+    B:halfDrawersSort41.9=false
+    B:trim0=true
+    B:trim0.1=true
+    B:trim0.2=true
+    B:trim0.3=true
+    B:trim0.4=true
+    B:trim0.5=true
+    B:trim0.6=true
+    B:trim0.7=true
+    B:trim0.8=true
+    B:trim1=true
+    B:trim1.1=true
+    B:trim1.10=true
+    B:trim1.11=true
+    B:trim1.2=true
+    B:trim1.3=true
+    B:trim1.4=true
+    B:trim1.5=true
+    B:trim1.6=true
+    B:trim1.7=true
+    B:trim1.8=true
+    B:trim1.9=true
 }
 
 
