--- a/config/HarderOres.cfg
+++ b/config/HarderOres.cfg
@@ -1,11 +1,15 @@
 # Configuration file
 
 configversion {
+    # Do not touch
     S:GENERAL=4.10
 }
 
 
 general {
+    # If Gany's Surface, Et Futurum, or Chisel is installed and this is true, cobblestone cannot be used to create stone tools,
+    # instead diorite is used. This prolongs the life of wood tools so it isn't "make a wood pickaxe to
+    # mine 3 stone and upgrade." [default: true]
     B:useDioriteStoneTools=false
 
     # Toggle to enable/disable sounds. [default: true]
@@ -13,26 +17,53 @@ general {
 }
 
 
+##########################################################################################################
+# milling
+#--------------------------------------------------------------------------------------------------------#
+# Enable (hard mode) these to remove vanilla recipes for items and instead require the millstone. In general,
+# easy means the millstone doubles resources, while hard is near-vanilla.
+##########################################################################################################
+
 milling {
+    #  [default: false]
     B:bonemealRequireMilling=false
+
+    #  [default: false]
     B:flourRequireMilling=false
+
+    # Sugar is a easy-to-get resource and rare-to-use, so it may be desirable to reduce the production.
+    # Output of milling sugar (in tiny piles) is this value in hard-milling and 2x this value in
+    # easy-milling.
+    # Vanilla Equivalence is 9. [range: 1 ~ 12, default: 6]
     I:sugarMillingMultiplier=6
+
+    # If enabled, sugarcane cannot be crafted into sugar [default: false]
     B:sugarRequireMilling=false
 }
 
 
 ores {
+    # These settings should be auto-detected during worldgen and act as an override.
+    # 0 will prevent flowers, 2 will enforce (set automatically), 1 is default. [range: 0 ~ 2, default: 1]
     I:OreExists...=1
     I:OreExistsAluminum=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsCadmium=2
     I:OreExistsCopper=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsFlourite=2
     I:OreExistsLead=2
     I:OreExistsNickel=2
     I:OreExistsSilver=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsThorium=2
     I:OreExistsTin=2
     I:OreExistsUranium=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsZinc=1
 }
 
