New mods, plus Bluepower configs

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -1949,6 +1949,99 @@ biomesoplenty {
 }
 
 
+bluepower {
+    B:alloyfurnace=false
+    B:amethystblock=true
+    B:amethystore=true
+    B:autoprojecttable=false
+    B:basalt=true
+    B:basaltbrick=true
+    B:basaltbrickcracked=true
+    B:basaltbricksmall=true
+    B:basaltcobble=true
+    B:basaltpaver=true
+    B:basalttile=true
+    B:blockbreaker=false
+    B:buffer=false
+    B:circuitdatabase=false
+    B:circuittable=false
+    B:copperblock=true
+    B:copperore=true
+    B:crackedbasaltlava=false
+    B:deployer=false
+    B:ejector=false
+    B:fancybasalt=true
+    B:fancymarble=true
+    B:filter=false
+    B:flaxcrop=false
+    B:igniter=false
+    B:indigoflower=false
+    B:itemdetector=false
+    B:lampRGB=false
+    B:lampblack=false
+    B:lampblue=false
+    B:lampbrown=false
+    B:lampcyan=false
+    B:lampgray=false
+    B:lampgreen=false
+    B:lampinvertedRGB=false
+    B:lampinvertedblack=false
+    B:lampinvertedblue=false
+    B:lampinvertedbrown=false
+    B:lampinvertedcyan=false
+    B:lampinvertedgray=false
+    B:lampinvertedgreen=false
+    B:lampinvertedlightblue=false
+    B:lampinvertedlightgray=false
+    B:lampinvertedlime=false
+    B:lampinvertedmagenta=false
+    B:lampinvertedorange=false
+    B:lampinvertedpink=false
+    B:lampinvertedpurple=false
+    B:lampinvertedred=false
+    B:lampinvertedwhite=false
+    B:lampinvertedyellow=false
+    B:lamplightblue=false
+    B:lamplightgray=false
+    B:lamplime=false
+    B:lampmagenta=false
+    B:lamporange=false
+    B:lamppink=false
+    B:lamppurple=false
+    B:lampred=false
+    B:lampwhite=false
+    B:lampyellow=false
+    B:manager=false
+    B:marble=true
+    B:marblebrick=true
+    B:marblebricksmall=true
+    B:marblepaver=true
+    B:marbletile=true
+    B:projecttable=false
+    B:regulator=false
+    B:reinforcedsapphireglass=false
+    B:relay=false
+    B:retriever=false
+    B:rubyblock=true
+    B:rubyore=true
+    B:sapphireblock=true
+    B:sapphireglass=false
+    B:sapphireore=true
+    B:silverblock=true
+    B:silverore=true
+    B:sortingmachine=false
+    B:sortron=false
+    B:teslatiteblock=true
+    B:teslatiteore=true
+    B:tiles=true
+    B:transposer=false
+    B:tungstenblock=true
+    B:tungstenore=true
+    B:zincblock=true
+    B:zincore=true
+}
+
+
 botania {
     B:alchemyCatalyst=true
     B:alfheimPortal=false
@@ -4719,6 +4812,13 @@ enderzoo {
 }
 
 
+enhancedinventories {
+    B:blockAutoAssembler=false
+    B:blockPainter=false
+    B:blockWorktable=false
+}
+
+
 enhancedportals {
     B:dbs=false
     B:dbsempty=true
@@ -6031,6 +6131,10 @@ gardentrees {
     B:thinlog.12909=false
     B:thinlog.12919=false
     B:thinlog.1299=false
+    B:thinlog.13058=false
+    B:thinlog.13059=false
+    B:thinlog.13060=false
+    B:thinlog.13061=false
     B:thinlog.13114=false
     B:thinlog.13115=false
     B:thinlog.13116=false
@@ -6203,7 +6307,10 @@ gardentrees {
     B:thinlog.4857=false
     B:thinlog.4863=false
     B:thinlog.4865=false
+    B:thinlog.4866=false
     B:thinlog.4867=false
+    B:thinlog.4868=false
+    B:thinlog.4869=false
     B:thinlog.4881=false
     B:thinlog.4883=false
     B:thinlog.4885=false
@@ -6344,7 +6451,10 @@ gardentrees {
     B:thinlog.761=false
     B:thinlog.767=false
     B:thinlog.769=false
+    B:thinlog.770=false
     B:thinlog.771=false
+    B:thinlog.772=false
+    B:thinlog.773=false
     B:thinlog.785=false
     B:thinlog.787=false
     B:thinlog.789=false
@@ -6391,6 +6501,10 @@ gardentrees {
     B:thinlog.8787=false
     B:thinlog.8813=false
     B:thinlog.8823=false
+    B:thinlog.8962=false
+    B:thinlog.8963=false
+    B:thinlog.8964=false
+    B:thinlog.8965=false
     B:thinlog.9018=false
     B:thinlog.9019=false
     B:thinlog.9020=false
@@ -6604,6 +6718,10 @@ gardentrees {
     B:thinlogfence.12909=false
     B:thinlogfence.12919=false
     B:thinlogfence.1299=false
+    B:thinlogfence.13058=false
+    B:thinlogfence.13059=false
+    B:thinlogfence.13060=false
+    B:thinlogfence.13061=false
     B:thinlogfence.13114=false
     B:thinlogfence.13115=false
     B:thinlogfence.13116=false
@@ -6776,7 +6894,10 @@ gardentrees {
     B:thinlogfence.4857=false
     B:thinlogfence.4863=false
     B:thinlogfence.4865=false
+    B:thinlogfence.4866=false
     B:thinlogfence.4867=false
+    B:thinlogfence.4868=false
+    B:thinlogfence.4869=false
     B:thinlogfence.4881=false
     B:thinlogfence.4883=false
     B:thinlogfence.4885=false
@@ -6917,7 +7038,10 @@ gardentrees {
     B:thinlogfence.761=false
     B:thinlogfence.767=false
     B:thinlogfence.769=false
+    B:thinlogfence.770=false
     B:thinlogfence.771=false
+    B:thinlogfence.772=false
+    B:thinlogfence.773=false
     B:thinlogfence.785=false
     B:thinlogfence.787=false
     B:thinlogfence.789=false
@@ -6964,6 +7088,10 @@ gardentrees {
     B:thinlogfence.8787=false
     B:thinlogfence.8813=false
     B:thinlogfence.8823=false
+    B:thinlogfence.8962=false
+    B:thinlogfence.8963=false
+    B:thinlogfence.8964=false
+    B:thinlogfence.8965=false
     B:thinlogfence.9018=false
     B:thinlogfence.9019=false
     B:thinlogfence.9020=false
@@ -10714,6 +10842,11 @@ progressiveautomation {
 props {
     B:blockFake=false
     B:blockProps=false
+}
+
+
+qmunitylib {
+    B:qmunitylibblocksmultipart=false
 }
 
 
