--- a/config/HarderOres.cfg
+++ b/config/HarderOres.cfg
@@ -46,6 +46,8 @@ ores {
     # These settings should be auto-detected during worldgen and act as an override.
     # 0 will prevent flowers, 2 will enforce (set automatically), 1 is default. [range: 0 ~ 2, default: 1]
     I:OreExists...=1
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsAluminum=2
 
     #  [range: 0 ~ 2, default: 1]
@@ -60,11 +62,13 @@ ores {
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsThorium=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsTin=2
     I:OreExistsUranium=2
 
     #  [range: 0 ~ 2, default: 1]
-    I:OreExistsZinc=1
+    I:OreExistsZinc=2
 }
 
 
