--- a/config/rftools/dimlets.cfg
+++ b/config/rftools/dimlets.cfg
@@ -113,6 +113,9 @@ dimletsettings {
     I:rarity.Material.tile.blockIron=4
     I:rarity.Material.tile.blockLapis=4
     I:rarity.Material.tile.blockRedstone=4
+    I:"rarity.Material.tile.bluepower:amethyst_ore"=3
+    I:"rarity.Material.tile.bluepower:ruby_ore"=3
+    I:"rarity.Material.tile.bluepower:teslatite_ore"=3
     I:rarity.Material.tile.dimensionalShardBlock=4
     I:rarity.Material.tile.gcBlockCore7=3
     I:rarity.Material.tile.gcBlockCore8=3
@@ -303,6 +306,9 @@ dimletsettings {
     I:rfcreate.Material.tile.blockIron=16000
     I:rfcreate.Material.tile.blockLapis=16000
     I:rfcreate.Material.tile.blockRedstone=16000
+    I:"rfcreate.Material.tile.bluepower:amethyst_ore"=8000
+    I:"rfcreate.Material.tile.bluepower:ruby_ore"=8000
+    I:"rfcreate.Material.tile.bluepower:teslatite_ore"=8000
     I:rfcreate.Material.tile.dimensionalShardBlock=15000
     I:rfcreate.Material.tile.gcBlockCore7=8000
     I:rfcreate.Material.tile.gcBlockCore8=8000
@@ -499,6 +505,9 @@ dimletsettings {
     I:rfmaintain.Material.tile.blockIron=6000
     I:rfmaintain.Material.tile.blockLapis=6000
     I:rfmaintain.Material.tile.blockRedstone=6000
+    I:"rfmaintain.Material.tile.bluepower:amethyst_ore"=4000
+    I:"rfmaintain.Material.tile.bluepower:ruby_ore"=4000
+    I:"rfmaintain.Material.tile.bluepower:teslatite_ore"=4000
     I:rfmaintain.Material.tile.dimensionalShardBlock=8000
     I:rfmaintain.Material.tile.gcBlockCore7=4000
     I:rfmaintain.Material.tile.gcBlockCore8=4000
@@ -693,6 +702,9 @@ dimletsettings {
     I:ticks.Material.tile.blockIron=300
     I:ticks.Material.tile.blockLapis=300
     I:ticks.Material.tile.blockRedstone=300
+    I:"ticks.Material.tile.bluepower:amethyst_ore"=700
+    I:"ticks.Material.tile.bluepower:ruby_ore"=700
+    I:"ticks.Material.tile.bluepower:teslatite_ore"=700
     I:ticks.Material.tile.dimensionalShardBlock=500
     I:ticks.Material.tile.gcBlockCore7=700
     I:ticks.Material.tile.gcBlockCore8=700
