First alpha of 2.0

--- a/config/bigtrees/biomegroups.cfg
+++ b/config/bigtrees/biomegroups.cfg
@@ -1319,6 +1319,8 @@
     S:"WASTELAND AND HILLS" <
         highlands.Rock Island
      >
+
+    # overrides above groups
     S:"WASTELAND AND HOT" <
         twilightforest.Fire Swamp
      >
@@ -1347,6 +1349,8 @@
     S:"WASTELAND AND SPOOKY" <
         biomesoplenty.Boneyard
      >
+
+    # overrides above groups
     S:"WASTELAND AND SWAMP" <
         biomesoplenty.Sludgepit
         biomesoplenty.Quagmire
