Re-enable forestry recipes through NEI Integration reversion

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -7792,6 +7792,7 @@ immersiveengineering {
 immersiveintegration {
     B:aeDecoration=true
     B:aeDecoration.1=true
+    B:extendablePost=false
     B:extendedPost=false
     B:inductionCharger=false
     B:inductionCharger.1=false
