--- a/config/neiintegration.cfg
+++ b/config/neiintegration.cfg
@@ -10,6 +10,7 @@ handlers {
 
 
 integrations {
+    # Whether to enable Forestry integration. Disable if this part of the mod causes crashes.
     B:Forestry=true
 
     # Whether to enable Minecraft / Forge integration. Disable if this part of the mod causes crashes.
