--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -7334,6 +7334,16 @@ grimoireofgaia {
 }
 
 
+guncus {
+    B:tileblockAmmo=true
+    B:tileblockBullet=true
+    B:tileblockGun=true
+    B:tileblockMag=true
+    B:tileblockWeapon=true
+    B:tilemine=false
+}
+
+
 hardcorequesting {
     B:itembarrel=false
     B:questportal=false
@@ -10837,6 +10847,49 @@ progressiveautomation {
     B:PlanterDiamond=false
     B:PlanterIron=false
     B:PlanterStone=false
+}
+
+
+projredfabrication {
+    B:projectredintegrationicblock=false
+    B:projectredintegrationicblock.1=false
+}
+
+
+projredillumination {
+    B:projectredilluminationairousLight=false
+    B:projectredilluminationlamp=false
+    B:projectredilluminationlamp.1=false
+    B:projectredilluminationlamp.10=false
+    B:projectredilluminationlamp.11=false
+    B:projectredilluminationlamp.12=false
+    B:projectredilluminationlamp.13=false
+    B:projectredilluminationlamp.14=false
+    B:projectredilluminationlamp.15=false
+    B:projectredilluminationlamp.16=false
+    B:projectredilluminationlamp.17=false
+    B:projectredilluminationlamp.18=false
+    B:projectredilluminationlamp.19=false
+    B:projectredilluminationlamp.2=false
+    B:projectredilluminationlamp.20=false
+    B:projectredilluminationlamp.21=false
+    B:projectredilluminationlamp.22=false
+    B:projectredilluminationlamp.23=false
+    B:projectredilluminationlamp.24=false
+    B:projectredilluminationlamp.25=false
+    B:projectredilluminationlamp.26=false
+    B:projectredilluminationlamp.27=false
+    B:projectredilluminationlamp.28=false
+    B:projectredilluminationlamp.29=false
+    B:projectredilluminationlamp.3=false
+    B:projectredilluminationlamp.30=false
+    B:projectredilluminationlamp.31=false
+    B:projectredilluminationlamp.4=false
+    B:projectredilluminationlamp.5=false
+    B:projectredilluminationlamp.6=false
+    B:projectredilluminationlamp.7=false
+    B:projectredilluminationlamp.8=false
+    B:projectredilluminationlamp.9=false
 }
 
 
