--- a/config/Waila.cfg
+++ b/config/Waila.cfg
@@ -86,6 +86,8 @@ modules {
     B:oc.componentName=true
     B:oc.energy=true
     B:openblocks.fluidamount=true
+    B:pr.showdata=true
+    B:pr.showio=true
     B:railcraft.fluidamount=true
     B:securitycraft.showmodules=true
     B:securitycraft.showowner=true
@@ -178,6 +180,8 @@ server_forcing {
     B:oc.componentName=false
     B:oc.energy=false
     B:openblocks.fluidamount=false
+    B:pr.showdata=false
+    B:pr.showio=false
     B:railcraft.fluidamount=false
     B:securitycraft.showmodules=false
     B:securitycraft.showowner=false
