--- a/config/HarderOres.cfg
+++ b/config/HarderOres.cfg
@@ -52,6 +52,8 @@ ores {
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsCadmium=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsCopper=2
 
     #  [range: 0 ~ 2, default: 1]
